# nordic-learning

UART/: CMakeLists.txt  prj.conf
UART/src/: main.c
adc1/: CMakeLists.txt  prj.conf  xiao_ble.overlay
adc1/src/: main.c
counter/: CMakeLists.txt  main.c
hdc40/p1/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
hdc40/p1/src/: hdc2010.c  hdc2010.h  main.c
i2c/: CMakeLists.txt  prj.conf  xiao_ble.overlay
i2c/src/: main.c
i2c/src/driver/: CMakeLists.txt  Kconfig
i2cPrac/: CMakeLists.txt  prj.conf  xiao_ble.overlay
i2cPrac/src/: main.c
isrUart/: CMakeLists.txt  prj.conf
isrUart/src/: main.c
lps22h3/: CMakeLists.txt  i2c.code-workspace  prj.conf  xiao_ble.overlay
lps22h3/src/: lps22h3.code-workspace  main.c
mt29g_flash_drivers/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
mt29g_flash_drivers/src/: main.c
pollingTXandRX/: CMakeLists.txt  prj.conf
pollingTXandRX/src/: main.c
powerOff/: CMakeLists.txt  prj.conf
powerOff/src/: main.c  system_off_2.code-workspace
powerOff3/: CMakeLists.txt  Kconfig  prj.conf  xiao_ble.overlay
powerOff3/src/: main.c  retained.h
ringBufferUart/: CMakeLists.txt  prj.conf
ringBufferUart/src/: main.c
rtcCount/: CMakeLists.txt  prj.conf  xiao_ble.overlay
rtcCount/src/: main.c
spi/: CMakeLists.txt  prj.conf  xiao_ble.overlay
spi/src/: main.c  spi.code-workspace
timer_1/: CMakeLists.txt  main.c  prj.conf  timer_1.code-workspace
timer_1/boards/: xiao_ble.overlay
txUartIrq/: CMakeLists.txt  prj.conf
txUartIrq/src/: main.c
